# AutoApply

./: .gitignore  CHANGELOG.md  README.md  app.py  app_state.py  pyproject.toml  requirements.txt  run.py  setup.py
.claude/: CLAUDE.md
.claude/docs/: AUDIT-fix-ui-cleanup-and-packaging-fixes.md  PRD-TASK-021-code-signing.md  (+43 more)
bot/: bot.py  browser.py  state.py
config/: settings.py
core/: ai_engine.py  ats_profiles.py  ats_scorer.py  cover_letter_assembler.py  document_parser.py  experience_calculator.py  filter.py  i18n.py  jd_analyzer.py  jd_classifier.py  kb_migrator.py  knowledge_base.py  latex_compiler.py  pdf_cache.py  portal_auth.py  resume_assembler.py  resume_parser.py  resume_renderer.py  resume_scorer.py  scheduler.py
db/: database.py  models.py
docs/: README.md
electron/: .gitignore  main.js  package-lock.json  package.json  preload.js  python-backend.js  splash.html  tray.js
routes/: __init__.py  analytics.py  applications.py  bot.py  config.py  knowledge_base.py  lifecycle.py  login.py  portal_auth.py  profile.py  resumes.py
templates/: index.html
tests/: conftest.py  test_ai_engine.py  test_api.py  test_app_detail.py  test_appliers_ats.py  test_appliers_coverage.py  test_appliers_workday_ashby.py  test_ats_scorer.py  test_bot_base.py  test_bot_coverage.py  test_bot_helpers.py  test_bot_loop.py  test_browser_manager.py  test_config_api.py  test_coverage_boost.py  test_database.py  test_document_parser.py  test_experience_calculator.py  test_filter.py  test_frontend_rendering.py  test_i18n.py  test_integration.py  test_intelligence.py  test_kb_config.py  test_kb_database.py  test_kb_integration.py  test_knowledge_base.py  test_knowledge_base_routes.py  test_latex_compiler.py  test_login_api.py  test_migration.py  test_performance.py  test_portal_auth.py  test_portal_auth_routes.py  test_quick_wins.py  test_rate_limiter.py  test_resume_assembler.py  test_resume_builder.py  test_resume_parser.py  test_resume_renderer.py  (+7 more)
(+112 files in other folders)
